# gui-python-pygobject-gtk4

./: .gitignore  CNAME  README.md  _config.yml  pyproject.toml  requirements.txt
_layouts/: default.html
docs/: gtk4-libadwaita-style-class.md  gtk4-libadwaita-widgets.md  gtk4-widgets.md
src/executables/_cx-freeze/: MainWindow.py
src/gtk4-libadwaita-style-class/class-background/ui/: MainWindow.py
src/gtk4-libadwaita-style-class/class-body/ui/: MainWindow.py
src/gtk4-libadwaita-style-class/class-boxed-list/ui/: MainWindow.py
src/gtk4-libadwaita-style-class/class-caption/ui/: MainWindow.py
src/gtk4-libadwaita-style-class/class-card/ui/: MainWindow.py
src/gtk4-libadwaita-style-class/class-circular/ui/: MainWindow.py
src/gtk4-libadwaita-style-class/class-colors/ui/: MainWindow.py
src/gtk4-libadwaita-style-class/class-compact/ui/: MainWindow.py
src/gtk4-libadwaita-style-class/class-destructive-action/ui/: MainWindow.py
src/gtk4-libadwaita-style-class/class-devel/ui/: MainWindow.py
src/gtk4-libadwaita-style-class/class-dim-label/ui/: MainWindow.py
src/gtk4-libadwaita-style-class/class-flat-headerbar/ui/: MainWindow.py
src/gtk4-widgets/dark-mode/: MainWindow.py
src/gtk4-widgets/file-chooser-dialog-folder/: MainWindow.py
src/gtk4-widgets/file-chooser-dialog-save/: MainWindow.py
src/gtk4-widgets/image/: MainWindow.py
src/gtk4-widgets/picture/: MainWindow.py
src/gtk4-widgets/signals-and-slots/: MainWindow.py
src/gtk4-widgets/translator-gettext/: MainWindow.py
src/gtk4-widgets/video/: MainWindow.py
(+70 files in other folders)
